# finance-news

./: .gitignore  AGENTS.md  README.md  backlog.config.yml  opencode.json  pyproject.toml
analysis/: arg_market_access_validation.md  arg_market_methodology.md  backlog_workflow.md  bea_nipa_schema_validation.md  connector_architecture.md  connector_fixtures_policy.md  connector_quality_matrix.md  current_transcripts.txt  host_profile.md  host_profile_evidence.md  indec_schema_validation.md  report_context_pack.md  report_evaluation_rubric.md  sec_ai_universe_validation.md  source_catalog.md  source_research_ai_markets.md  source_research_arg_market.md  source_research_bcra.md  source_research_commodities_geo.md  source_research_fed.md  source_research_indec.md  source_research_tesoro.md  source_research_us_liquidity.md  source_research_us_macro.md  tesoro_cashflows_schema_validation.md  transcript_glossary.md  treasurydirect_api_validation.md  weekly_report_schema.md  weekly_signal_scoring.md
config/: sources.toml
docs/: TASK-4.1-bcra-fetch-check.md  source_credentials.md
scripts/: backlog.sh  download_podcast.sh  finance-news.sh  inventory.py  transcribe_mlx_whisper.sh  transcribe_whisper_cpp.sh
tests/: test_bcra_balance_cambiario.py  test_bcra_calendario.py  test_bcra_catalogo.py  test_bcra_comunicaciones_a.py  test_bcra_dolar_oficial.py  test_bcra_tasas_cer_tamar.py  test_bcra_variables_reservas.py  test_bea_personal_income.py  test_bea_real_gdp.py  test_bls_timeseries.py  test_bora_financial.py  test_cli_runner.py  test_config.py  test_connector_logging.py  (+31 more)
(+213 files in other folders)
